improve search_subtrips controller and and its actions views

--- a/app/views/search_subtrips/_subtrip_row.html.erb
+++ b/app/views/search_subtrips/_subtrip_row.html.erb
@@ -2,6 +2,7 @@
 	<td><%= s.origin.local_name %> </td>
 	<td><%= s.destination.local_name %> </td>
 	<td><%= s.date_time.to_s(:time) %> </td>
+	<td><%= jalali_date s.date_time %> </td>
 	<td><%= s.price %> </td>
 	<td>
 		<%= s.trip.driver.name %> 
