--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,5 +1,5 @@
 	<div id="siteHeader">
 		<div id="siteLogo" class="pull-right">
-      <%= link_to image_tag("logo.gif"), root_path %>
+      <%= link_to image_tag("https://s3-eu-west-1.amazonaws.com/shouter/static_files/css/images/logo.gif"), root_path %>
 		</div>
 	</div>
