--- a/app/views/search_subtrips/search.html.erb
+++ b/app/views/search_subtrips/search.html.erb
@@ -2,8 +2,8 @@
 	<%= render partial: 'search_form', locals:{search_mode: @search_mode, search_subtrip: @search_subtrip  } %>
 </div>
 
-<% if @search_subtrip.subtrips(3).any? %>
-	<%= render partial: 'subtrips', locals:{subtrips: subtrips, search_subtrip: @search_subtrip  } %>
+<% if @subtrips && @subtrips.any? %>
+	<%= render partial: 'subtrips', locals:{subtrips: @subtrips, search_subtrip: @search_subtrip  } %>
 <% else %>
 	<p>No record with this condition. please try again.</p>
 <% end %>
