--- a/app/views/search_subtrips/_subtrip_row.html.erb
+++ b/app/views/search_subtrips/_subtrip_row.html.erb
@@ -1,8 +1,21 @@
+<% if subtrips[i-1] && subtrips[i].jday !=  subtrips[i-1].jday%>
+	<tr  class="success">
+		<td> <b> <%= jalali_date subtrips[i].date_time %> </b></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+<hr> 
+<% end %>
+
 <tr>
+	<td><%= s.date_time.to_s(:time) %> </td>
 	<td><%= s.origin.local_name %> </td>
 	<td><%= s.destination.local_name %> </td>
-	<td><%= s.date_time.to_s(:time) %> </td>
-	<td><%= jalali_date s.date_time %> </td>
+
+	
 	<td><%= s.price %> </td>
 	<td>
 		<%= s.trip.driver.name %> 
@@ -12,3 +25,4 @@
 	</td>
 	<td><%= link_to "Detail", subtrip_path(s.id) %></td>
 </tr>
+
