clean up search subtrip page. show subtrip grouped by despature date

--- a/app/views/search_subtrips/_subtrip_row.html.erb
+++ b/app/views/search_subtrips/_subtrip_row.html.erb
@@ -1,13 +1,12 @@
 <% if subtrips[i-1] && subtrips[i].jday !=  subtrips[i-1].jday%>
 	<tr  class="success">
-		<td> <b> <%= jalali_date subtrips[i].date_time %> </b></td>
+		<td> <h4> <%= jalali_date subtrips[i].date_time %> </h4></td>
 		<td></td>
 		<td></td>
 		<td></td>
 		<td></td>
 		<td></td>
 	</tr>
-<hr> 
 <% end %>
 
 <tr>
