--- a/app/views/search_subtrips/search.html.erb
+++ b/app/views/search_subtrips/search.html.erb
@@ -1,3 +1,4 @@
+<%= error_messages_for(@search_subtrip) %>
 <div class="row ">
 	<%= render partial: 'search_form', locals:{search_mode: @search_mode, search_subtrip: @search_subtrip  } %>
 </div>
@@ -7,3 +8,5 @@
 <% else %>
 	<p>No record with this condition. please try again.</p>
 <% end %>
+
+<%= JalaliDate.new(1392,10,12).to_gregorian.beginning_of_day	 %>
