--- a/app/views/search_subtrips/search.html.erb
+++ b/app/views/search_subtrips/search.html.erb
@@ -1,12 +1,27 @@
-<%= error_messages_for(@search_subtrip) %>
-<div class="row ">
-	<%= render partial: 'search_form', locals:{search_mode: @search_mode, search_subtrip: @search_subtrip  } %>
+<div class="panel panel-default">
+  <div class="panel-body">
+		<%= render partial: 'search_form', locals:{search_mode: @search_mode, search_subtrip: @search_subtrip  } %>
+  </div>
 </div>
 
-<% if @subtrips && @subtrips.any? %>
-	<%= render partial: 'subtrips', locals:{subtrips: @subtrips, search_subtrip: @search_subtrip  } %>
-<% else %>
-	<p>No record with this condition. please try again.</p>
-<% end %>
 
-<%= JalaliDate.new(1392,10,12).to_gregorian.beginning_of_day	 %>
+<div class="sidebar col-md-3">
+	<div class="panel panel-default ">
+	  <div class="panel-heading">
+	    <h3 class="panel-title">Search restrictions</h3>
+	  </div>
+	  <div class="panel-body">
+	    Content
+	  </div>
+	</div>	
+</div>
+
+<div class="content col-md-9">
+	<% if @subtrips && @subtrips.any? %>
+		<%= render partial: 'subtrips', locals:{subtrips: @subtrips, search_subtrip: @search_subtrip  } %>
+	<% elsif @search_subtrip.errors.any? %>
+		<%= error_messages_for(@search_subtrip) %>
+	<% else %>
+		<p>No record with this condition. please try again.</p>
+	<% end %>
+</div>
