--- a/app/views/search_subtrips/_search_form.html.erb
+++ b/app/views/search_subtrips/_search_form.html.erb
@@ -1,28 +1,30 @@
-<div id="top-search-form">
-	<%= simple_form_for :search_subtrip, url: search_search_subtrips_path, method: :get, 
-    :html => { :class => '',role: "form" } do |f| %>
-		
-<!-- Search From Select -->
-		<% if session['search_mode'] == 'autocomplete' %>
-			<%= render partial: 'search_subtrips/search_form_with_autocomplete', locals:{f: f} %>	
-		<% else %>
-			<%= render partial: 'search_subtrips/search_form_without_autocomplete', locals:{f: f} %>
-		<% end %>		
+<div class="panel panel-default">
+  <div class="panel-body">
+	  <div id="top-search-form">
+			<%= simple_form_for :search_subtrip, url: search_search_subtrips_path, method: :get, 
+		    :html => { :class => '',role: "form" } do |f| %>
+				
+		<!-- Search From Select -->
+				<% if session['search_mode'] == 'autocomplete' %>
+					<%= render partial: 'search_subtrips/search_form_with_autocomplete', locals:{f: f} %>	
+				<% else %>
+					<%= render partial: 'search_subtrips/search_form_without_autocomplete', locals:{f: f} %>
+				<% end %>		
 
+		<!-- Submit -->
+			  <div class="col-sm-4 col-md-4">
+						<%= f.submit "Search", class: "btn btn-primary " %>
+				</div>		
+			<% end %>
 
-<!-- Submit -->
-	  <div class="col-sm-4 col-md-4">
-				<%= f.submit "Search", class: "btn btn-primary " %>
-		</div>		
-	<% end %>
-
-<!-- Form Mode Change Links -->
-	<div class="col-sm-4 col-md-4">
-		<% if session['search_mode'] == 'autocomplete' %>
-				<%= link_to "Autocomplete Mode", choose_search_mode_search_subtrips_path(search_mode: 'select') %>
-		<% else %>
-				<%= link_to "Select Mode", choose_search_mode_search_subtrips_path(search_mode: 'autocomplete') %> 
-		<% end %>
+		<!-- Form Mode Change Links -->
+			<div class="col-sm-4 col-md-4">
+				<% if session['search_mode'] == 'autocomplete' %>
+						<%= link_to "Autocomplete Mode", choose_search_mode_search_subtrips_path(search_mode: 'select') %>
+				<% else %>
+						<%= link_to "Select Mode", choose_search_mode_search_subtrips_path(search_mode: 'autocomplete') %> 
+				<% end %>
+			</div>
+		</div>
 	</div>
-
 </div>
