--- a/app/views/search_subtrips/show.html.erb
+++ b/app/views/search_subtrips/show.html.erb
@@ -1,4 +1,6 @@
-<%= render 'search_form' %>
+<%= render partial: 'search_form', locals:{search_mode: @search_mode, search_subtrip: @search_subtrip  } %>
+
+
 <% if @subtrips.any? %>
 	<%= render partial: 'subtrips', locals:{subtrips: @subtrips} %>
 <% end %>
