--- a/app/assets/stylesheets/costum.scss.css
+++ b/app/assets/stylesheets/costum.scss.css
@@ -18,6 +18,10 @@ body{
 	margin-top: 30px;
 }
 
+.navbar{
+	z-index: 0;
+}
+
 .sidebar{
 	padding-right: 0;
 }
@@ -25,4 +29,10 @@ body{
 .content{
 	padding-left: 0;
 	padding-right: 0;
+}
+
+.top_navbar .link a{
+	padding-bottom: 0;
+	padding-top: 5px;
+
 }
