--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default" role="navigation">
+<div class="top_navbar navbar navbar-default navbar-static-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -11,14 +11,14 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
 			<% if user_signed_in? %>
-				<li><%= link_to gravatar(current_user, 32, "img-rounded"), dashboard_path %> </li>
+				<li class="link"><%= link_to gravatar(current_user, 32, "img-rounded"), dashboard_path %> </li>
 				<li><%= link_to "Edit Profile", edit_user_registration_path %></li>
 				<li><%= link_to "show Profile", current_user %></li>
-        <li><%= link_to "Insert trip", new_trip_path %></li>
-        <li><%= link_to "Find a trip", search_subtrips_path %></li>
-				<li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+
+				<li><%= link_to "Logout <span class=\"glyphicon glyphicon-search\"></span>".html_safe, destroy_user_session_path, method: :delete %>
+        
+        </li>
 			<% else %>
 				<li><%= link_to "Sign Up", new_user_registration_path %></li>
 				<li><%= link_to "Login", new_user_session_path %></li>
