--- a/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
@@ -1,8 +1,6 @@
 <!-- Origin -->
 <div class="origin_input col-sm-6 col-md-4">
-	<div class="form-group ">
-		<%= f.input :origin_id,:label => false, placeholder:"Select start city",  input_html: {class: "form-control"} %>					
-	</div>
+	<%= f.input :origin_id,:label => false, placeholder:"Select start city",  input_html: {class: "form-control"} %>					
 	<div class=" cycle autocomplete_mode">
 	<%= f.select :origin_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}, {}, class: ""%>
 	</div>
@@ -10,16 +8,14 @@
 
 <!-- Destination -->
 <div class=" destination_input col-sm-6 col-md-4">
-	<div class="form-group ">
-		<%= f.input :destination_id,:label => false, placeholder: "Select your destination", input_html: {class: "form-control"} %>
-	</div>
+	<%= f.input :destination_id,:label => false, placeholder: "Select your destination", input_html: {class: "form-control"} %>
 	<div class=" cycle autocomplete_mode">
 	<%= f.select :destination_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}, {}, class: "" %> 
 	</div>
 </div>
 
 <!-- DatePicker -->
-<div class="form-group datepicker-input col-sm-4 col-md-4">
+<div class="datepicker-input col-sm-4 col-md-2">
 	<%= f.text_field :date, class: "form-control datepicker" %>
 </div>
 
