--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,7 @@
  *
  *= require jquery-ui-1.10.3.custom.min
  *= require chosen
- *= require bootstrap
+ *= require main
  *= require bootstrap-rtl
  *= require select2
  *= require_self
