--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Glyphicons Halflings";
-    src: url(fonts/glyphicons-halflings-regular.ttf);
+    src: url(https://s3-eu-west-1.amazonaws.com/shouter/static_files/fonts/glyphicons-halflings-regular.ttf);
 }
 
 
