add bootstrap js file to vender

--- a/app/views/layouts/application_new_jquery.html.erb
+++ b/app/views/layouts/application_new_jquery.html.erb
@@ -22,5 +22,15 @@
 	
 	<%= yield %>
 </div>
+
+<%= render 'footer' %>
+
+<script>
+	$(document).ready(function(){
+	 $(".tip").tooltip();
+	});
+		
+</script>
+
 </body>
 </html>
