--- a/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
@@ -1,6 +1,6 @@
 <!-- Origin -->
 <div class="origin_input col-sm-6 col-md-4">
-    <%= f.grouped_collection_select :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'chosen-select chosen-rtl form-control', placeholder: "Select start city"} %>
+    <%= f.grouped_collection_select :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input', placeholder: "Select start city"} %>
 	<div class="cycle select_mode">
 	<%= f.select :origin_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}, {}, class: ""%>
 	</div>
@@ -8,17 +8,8 @@
 
 <!-- Destination -->
 <div class=" destination_input col-sm-6 col-md-4">
-    <%= f.grouped_collection_select :destination_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'chosen-select chosen-rtl form-control', placeholder: "Select start city"} %>
+    <%= f.grouped_collection_select :destination_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input', placeholder: "Select destination city"} %>
 	<div class="cycle select_mode">
 	<%= f.select :destination_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}, {}, class: "" %> 
 	</div>
 </div>
-
-<!-- DatePicker -->
-<div class="form-group datepicker-input col-sm-4 col-md-3">
-    <%= f.select :jday, 1..31  %> 
-    <%= f.select :jmonth, collection_for_month %>
-    <%= f.select :jyear, 1392..1393 %> 
-</div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js" type="text/javascript"></script>
