--- a/app/assets/stylesheets/search_subtrips.css.scss
+++ b/app/assets/stylesheets/search_subtrips.css.scss
@@ -2,19 +2,91 @@
 	input{
 		width: 100%;
 	}
+	.origin_input .glyphicon-map-marker{
+		color: #b7c635;
+	}
+	.destination_input .glyphicon-map-marker{
+		color: #bc2328;
+	}
   .origin_input, .destination_input{
+  	input{
+	  	padding-right: 25px;
+  	}
 	  .form-group{
-		width: 100%;
+			width: 100%;
+		}
+		.glyphicon-map-marker{
+			position: absolute;
+			position: absolute;
+			font-size: 1.3em;
+			top: 6px;
+			right: 21px;			
+		}
+		.select2_input a{
+			border-top-left-radius: 0px;
+			border-bottom-left-radius: 0px;				
+			border-top-right-radius: 4px;
+			border-bottom-right-radius: 4px;
 		}
 		.cycle{
 			position: absolute;
+			top: 0;
+			z-index: 10111;
+			width: 73px;
+			height: 34px;
+			overflow: hidden;
+			// background: url(new_arrow.png) no-repeat right #ddd;
+			border: 1px solid #ccc;			
 			select{
-			background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
-			border: medium none;
-			padding-top: 6px;
-			width: 65px;
+				background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+				border: medium none;
+				padding-top: 6px;
+				padding: inherit;
+
+				background: transparent;
+				width: 70px;
+				line-height: 1;
+				border: 0;
+				border-radius: 10px;
+				height: 34px;
+				-webkit-appearance: none;
+			}
+			select:focus{
+			    outline: 0;
+			}
+			span{
+				margin-top: 12px;
+				position: absolute;
+				left: 5px;
+				z-index: -18;					
 			}
 		}
+		.autocomplete_mode{
+			border: 0;
+			span{
+				top: -1px;
+			}
+		}
+		.select_mode{
+			border: 1px solid #aaa;
+			height: 26px;
+			background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eee), color-stop(0.5, #fff));
+			background-image: -webkit-linear-gradient(center bottom, #eee 0%, #fff 50%);
+			background-image: -moz-linear-gradient(center bottom, #eee 0%, #fff 50%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#ffffff', endColorstr = '#eeeeee', GradientType = 0);
+			background-image: linear-gradient(top, #fff 0%, #eee 50%);
+			border-top-left-radius: 4px;
+			border-bottom-left-radius: 4px;			
+			span{
+				top: -5px;
+			}
+			select{
+				height: 26px;
+			}
+		}
+	}
+	.mode-selector a{
+		font-size: .8em !important;
 	}
 }
 
