--- a/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
@@ -1,15 +1,17 @@
 <!-- Origin -->
-<div class="origin_input col-sm-6 col-md-4">
+<div class="origin_input col-sm-6 my-col-md-7">
     <%= f.grouped_collection_select :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input', placeholder: "Select start city"} %>
 	<div class="cycle select_mode">
-	<%= f.select :origin_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}, {}, class: ""%>
+	<%= f.select :origin_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}, {selected: 20}%>
+		<span class="glyphicon glyphicon-chevron-down"></span>
 	</div>
 </div>
 
 <!-- Destination -->
-<div class=" destination_input col-sm-6 col-md-4">
+<div class=" destination_input col-sm-6 my-col-md-7">
     <%= f.grouped_collection_select :destination_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input', placeholder: "Select destination city"} %>
 	<div class="cycle select_mode">
-	<%= f.select :destination_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}, {}, class: "" %> 
+	<%= f.select :destination_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}, {selected: 20} %> 
+		<span class="glyphicon glyphicon-chevron-down"></span>
 	</div>
 </div>
