--- a/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
@@ -3,7 +3,7 @@
 	<span class="glyphicon glyphicon-map-marker"></span>
 	<%= f.input :origin_id,:label => false, placeholder:"Select start city",  input_html: {class: "form-control"} %>					
 	<div class=" cycle autocomplete_mode" style="border:0;">
-	<%= f.select :origin_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}, {selected: 20} %>
+	<%= f.select :origin_cycle, (5..50).step(5).map{|s| ["#{s} KM", s]}%>
 	<span class="glyphicon glyphicon-chevron-down"></span>
 
 	</div>
@@ -14,7 +14,7 @@
 	<span class="glyphicon glyphicon-map-marker"></span>
 	<%= f.input :destination_id,:label => false, placeholder: "Select your destination", input_html: {class: "form-control"} %>
 	<div class=" cycle autocomplete_mode"  style="border:0;">
-	<%= f.select :destination_cycle, (0..50).step(5).map{|s| ["#{s} Km", s]}, {selected: 20} %> 
+	<%= f.select :destination_cycle, (5..50).step(5).map{|s| ["KM #{s}", s]}%> 
 	<span class="glyphicon glyphicon-chevron-down"></span>
 
 	</div>
