fix seaarch subtrip form responsive css problem with width

--- a/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
@@ -1,5 +1,5 @@
 <!-- Origin -->
-<div class="origin_input col-sm-6 my-col-md-7">
+<div class="origin_input col-sm-6  my-col-md-12 my-col-lg-7">
 	<span class="glyphicon glyphicon-map-marker"></span>
 	<%= f.input :origin_name,:label => false, placeholder:"Select start city",  input_html: {class: "form-control"} %>					
 	<div class=" cycle autocomplete_mode" style="border:0;">
@@ -10,7 +10,7 @@
 </div>
 
 <!-- Destination -->
-<div class=" destination_input col-sm-6 my-col-md-7">
+<div class=" destination_input col-sm-6  my-col-md-12 my-col-lg-7">
 	<span class="glyphicon glyphicon-map-marker"></span>
 	<%= f.input :destination_name,:label => false, placeholder: "Select your destination", input_html: {class: "form-control"} %>
 	<div class=" cycle autocomplete_mode"  style="border:0;">
