--- a/app/views/search_subtrips/_search_form.html.erb
+++ b/app/views/search_subtrips/_search_form.html.erb
@@ -12,19 +12,19 @@
 				<% end %>		
 
 		<!-- DatePicker -->
-				<div class="form-group datepicker-input col-sm-4 my-col-md-5">
+				<div class="form-group datepicker-input col-sm-4 my-col-lg-5">
 				    <%= f.select :jday, 1..31  %> 
 				    <%= f.select :jmonth, collection_for_month %>
 				    <%= f.select :jyear, 1392..1393 %> 
 				</div>
 		<!-- Submit -->
-			  <div class="col-sm-4 my-col-md-3">
+			  <div class="col-sm-4 my-col-lg-3">
 						<%= f.button :submit, "Search", class: "btn btn-primary " %>
 				</div>		
 			<% end %>
 
 		<!-- Form Mode Change Links -->
-			<div class="col-sm-4 my-col-md-2 mode-selector">
+			<div class="col-sm-4 my-col-lg-2 mode-selector">
 				<% if session['search_mode'] == 'autocomplete' %>
 						<%= link_to "Autocomplete Mode", choose_search_mode_search_subtrips_path(search_mode: 'select') %>
 				<% else %>
