--- a/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
@@ -1,5 +1,5 @@
 <!-- Origin -->
-<div class="origin_input col-sm-6 my-col-md-7">
+<div class="origin_input col-sm-6 my-col-md-12 my-col-lg-7">
     <%= f.grouped_collection_select :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input', placeholder: "Select start city"} %>
 	<div class="cycle select_mode">
 	<%= f.select :origin_cycle, (5..50).step(5).map{|s| ["#{s} KM", s]}%>
@@ -8,7 +8,7 @@
 </div>
 
 <!-- Destination -->
-<div class=" destination_input col-sm-6 my-col-md-7">
+<div class=" destination_input col-sm-6 my-col-md-12 my-col-lg-7">
     <%= f.grouped_collection_select :destination_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input', placeholder: "Select destination city"} %>
 	<div class="cycle select_mode">
 	<%= f.select :destination_cycle, (5..50).step(5).map{|s| ["#{s} KM", s]} %> 
