style for login and sign up pages

--- a/app/assets/stylesheets/costum.scss.css
+++ b/app/assets/stylesheets/costum.scss.css
@@ -37,6 +37,10 @@ body{
 
 }
 
+.error{
+    color: #911;
+}
+
 /*make select2 highlight for states*/
 .select2-results li.select2-result-with-children > .select2-result-label {
     background-color: #bbb;
