--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -1,8 +1,17 @@
 @font-face {
-    font-family: "Glyphicons Halflings";
-    src: url(https://s3-eu-west-1.amazonaws.com/shouter/static_files/fonts/glyphicons-halflings-regular.ttf);
+  font-family: "Glyphicons Halflings";
+  src: url(https://s3-eu-west-1.amazonaws.com/shouter/static_files/fonts/glyphicons-halflings-regular.ttf);
+  src: url(https://s3-eu-west-1.amazonaws.com/shouter/static_files/fonts/glyphicons-halflings-regular.eot);
+  src: url(https://s3-eu-west-1.amazonaws.com/shouter/static_files/fonts/glyphicons-halflings-regular.eot?#iefix) format('embedded-opentype'), 
+		  url(https://s3-eu-west-1.amazonaws.com/shouter/static_files/fonts/glyphicons-halflings-regular.woff) format('woff'), 
+		  url(https://s3-eu-west-1.amazonaws.com/shouter/static_files/fonts/glyphicons-halflings-regular.ttf) format('truetype'), 
+		  url(https://s3-eu-west-1.amazonaws.com/shouter/static_files/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular) format('svg');
+
 }
 
+.field_with_errors {
+  @extend .has-error
+}
 
 $navbar-height: 50px;
 
