--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -15,11 +15,11 @@
 				<li class="link"><%= link_to gravatar(current_user, 32, "img-rounded"), dashboard_path %> </li>
 				<li><%= link_to "Edit Profile", edit_user_registration_path %></li>
 				<li><%= link_to "show Profile", current_user %></li>
-				<li><%= link_to "<span class=\"glyphicon glyphicon-log-out\"></span>".html_safe, destroy_user_session_path, method: :delete %>     
+				<li><%= link_to "Sign out <span class=\"glyphicon glyphicon-log-out\"></span>".html_safe, destroy_user_session_path, method: :delete %>     
         </li>
 			<% else %>
 				<li><%= link_to "Sign Up", new_user_registration_path %></li>
-				<li><%= link_to "<span class=\"glyphicon glyphicon-log-in\"></span>".html_safe, new_user_session_path %></li>
+				<li><%= link_to "Sign in <span class=\"glyphicon glyphicon-log-in\"></span>".html_safe, new_user_session_path %></li>
 			<% end %>	
       </ul>
     </div><!--/.nav-collapse -->
