--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,17 @@
-<h2>Sign up</h2>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: {class: "form-sign-in-up"}, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+ 	<h2 class="form-sign-in-up-heading">Sign up form</h2>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+ 	<%#= devise_error_messages! %>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <%= f.input :email, :autofocus => true, :required => true, placeholder: "Email address", input_html: { class: "form-control " }, label: false  ,error_html: {class: "" } %>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <%= f.input :password, placeholder: "Password", input_html: { class: "form-control " }, label: false   %>
 
-  <div><%= f.submit "Sign up" %></div>
+  <%= f.input :password_confirmation, placeholder: "Password Confirmation", input_html: { class: "form-control " }, label: false   %>
+
+  <%= f.button :submit, "Sign up", class: "btn btn-lg btn-primary btn-block " %>
+    <%= link_to "Sign in", new_session_path(resource_name), class: "btn btn-link" %>
+
 <% end %>
 
-<%= render "devise/shared/links" %>
