--- a/app/views/text_shouts/_text_shout.html.erb
+++ b/app/views/text_shouts/_text_shout.html.erb
@@ -1,3 +1,5 @@
 <%= shouterize(text_shout.body) %> 
-<%= link_to "remove", text_shout_path(text_shout), method: :delete %>
+<% if can? :destroy, text_shout %>
+	<%= link_to "remove", text_shout_path(text_shout), method: :delete %>	
+<% end %>
 
