--- a/app/assets/stylesheets/costum.scss.css
+++ b/app/assets/stylesheets/costum.scss.css
@@ -1,4 +1,5 @@
 body{
+    padding-top: 50px;
 	background: #eee;
 }
 
@@ -8,18 +9,28 @@ body{
 	box-shadow: 0 0 3px #999999;	
 }
 
-#siteHeader{
-	background: url("https://s3-eu-west-1.amazonaws.com/shouter/static_files/css/images/headerBG.gif") 10px bottom no-repeat;
-	height: 100px;
-	border-bottom: 2px solid #91a022;
-}
+@media (min-width: 750px) {
+    #siteHeader{
+        background: url("https://s3-eu-west-1.amazonaws.com/shouter/static_files/css/images/headerBG.gif") 10px bottom no-repeat;
+        height: 100px;
+        border-bottom: 2px solid #91a022;
+    }
 
+}
+ 
+.top_navbar .navbar-brand{
+    padding-bottom: 0;
+    padding-top: 0;   
+}
+ 
 #siteLogo{
 	margin-top: 30px;
 }
 
 .navbar{
-	z-index: 0;
+    background-color: transparent;
+    
+    border-color: transparent;
 }
 
 .sidebar{
