--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,4 +1,4 @@
-	<div id="siteHeader">
+	<div id="siteHeader" class="hidden-xs">
 		<div id="siteLogo" class="pull-right">
       <%= link_to image_tag("https://s3-eu-west-1.amazonaws.com/shouter/static_files/css/images/logo.gif"), root_path %>
 		</div>
