--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="top_navbar navbar navbar-default navbar-static-top" role="navigation">
+<div class="top_navbar navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -7,7 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand visible-xs" href="#">Hamsafar Yab</a>
+      <a class="navbar-brand visible-xs" href="#">
+<%= image_tag("https://s3-eu-west-1.amazonaws.com/shouter/static_files/css/images/logo-xs.gif") %>
+      </a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
@@ -21,6 +23,11 @@
 				<li><%= link_to "Sign Up", new_user_registration_path %></li>
 				<li><%= link_to "Sign in <span class=\"glyphicon glyphicon-log-in\"></span>".html_safe, new_user_session_path %></li>
 			<% end %>	
+      </ul>
+
+      <ul class="nav navbar-nav navbar-left">
+        <li><%= link_to "Insert trip", new_trip_path %></li>
+        <li><%= link_to "Find a trip <span class=\"glyphicon glyphicon-road\"></span>".html_safe, search_subtrips_path %></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
