--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,23 +1,25 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="page-header">
+  <h2>Edit <%= resource_name.to_s.humanize %></h2>  
+</div>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
 
-  <h2>Personal Detail</h2>
+  <h3>Personal Detail</h3>
   <%= f.input :avatar, as: :file %>
   <%= f.input :gender %>
   <%= f.input :username %>
   <%= f.input :firstname %>
   <%= f.input :lastname %>
 
-  <h2>Contact Detail</h2>
+  <h3>Contact Detail</h3>
   <%= f.input :tel %>
   <%= f.input :mobile %>
   <%= f.input :address %>
   <%= f.input :post_code %>
   
-  <h2>Acount settings</h2>
+  <h3>Acount settings</h3>
   <%= f.input :email %>
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
