--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -1,10 +1,18 @@
 <%= div_for	shout do %> 
-	<%= gravatar shout.user %>
+	<%= link_to gravatar(shout.user), shout.user %>
 	<%= link_to shout.user.name, shout.user %>
-	shouted: 	
-	<%#= link_to shout.body, shout %>	
-	<div>
-		<%= render shout.content %>
+	<div class="content">
+		<p>
+			<%= render shout.content %>
+		</p>
+		<span class="meta">
+			<%= time_ago_in_words(shout.created_at) %> ago			
+			<% if can? :destroy, shout.content %>
+				<span class="remove">
+					<%= link_to "remove", shout.content, method: :delete, class: "pull-left", data: {confirm: "Are you sure you want to delete this shout?"} %>
+				</span>
+			<% end %>
+		</span>	
 	</div>
-	<%= time_ago_in_words(shout.created_at) %> ago
+
 <% end %>
