--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,16 +1,9 @@
-<% @dashboard.new_text_shout.errors.full_messages.each do |msg| %>
-	<li><%= msg %> </li>
-<% end %>
-</ul>
-<%= form_for @dashboard.new_text_shout do |f| -%>
-  <%= f.text_field :body, placeholder: 'Shout content here' %>
-  <%= f.submit "Shout!" %>
-<% end %>
+<div class="col-md-4">
+	<%= render partial: 'users/users_row', locals: {users: @followed_users} %>
+	<%= render partial: 'users/users_row', locals: {users: @random_users} %>
+</div>
 
-<%= form_for @dashboard.new_photo_shout do |f| -%>
-  <%= f.file_field :image %>
-  <%= f.submit "Shout!" %>
-<% end %>
-
-<%= render @dashboard.timeline %>
-			
+<div class="col-md-8">
+	<%= render 'shouts/form' %>
+	<%= render @dashboard.timeline %>
+</div>
