--- a/app/assets/stylesheets/costum.scss.css
+++ b/app/assets/stylesheets/costum.scss.css
@@ -14,6 +14,7 @@ body{
         background: url("https://s3-eu-west-1.amazonaws.com/shouter/static_files/css/images/headerBG.gif") 10px bottom no-repeat;
         height: 100px;
         border-bottom: 2px solid #91a022;
+        margin-bottom: 15px;
     }
 
 }
@@ -31,6 +32,10 @@ body{
     background-color: transparent;
     
     border-color: transparent;
+}
+
+#siteContent{
+    margin-top: 15px;
 }
 
 .sidebar{
