--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,11 @@
   	<%= render 'header' %>
 
   	<%#= render 'searches/form' %>
-
-  	<%= flash_creator flash %>
-
-  	<%= yield %>
-
+    <div id="siteContent">
+      <%= flash_creator flash %>
+      <%= yield %>  
+    </div>
+    
   </div>
 
   <%= render 'footer' %>
