add meta tags and make my_constants file in initializers

--- a/app/assets/stylesheets/search_subtrips.css.scss
+++ b/app/assets/stylesheets/search_subtrips.css.scss
@@ -91,11 +91,11 @@
 }
 
 .autocomplete_mode{
-  left: 17px;
+  right: 234px;
   top: 3px; 		
 }
 .select_mode{
-  left: 17px;
+  right: 234px;
   top: -4px;	
 }
 
