--- a/app/assets/stylesheets/costum.scss.css
+++ b/app/assets/stylesheets/costum.scss.css
@@ -11,7 +11,7 @@ body{
 
 @media (min-width: 750px) {
     #siteHeader{
-        background: url("https://s3-eu-west-1.amazonaws.com/shouter/static_files/css/images/headerBG.gif") 10px bottom no-repeat;
+        background: url("https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/headerBG.gif") 10px bottom no-repeat;
         height: 100px;
         border-bottom: 2px solid #91a022;
         margin-bottom: 15px;
