--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand visible-xs" href="#">
-<%= image_tag("https://s3-eu-west-1.amazonaws.com/shouter/static_files/css/images/logo-xs.gif") %>
+<%= image_tag("#{IMAGES_PATH}logo-xs.gif") %>
       </a>
     </div>
     <div class="collapse navbar-collapse">
