--- a/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
@@ -15,3 +15,6 @@
 		<span class="glyphicon glyphicon-chevron-down"></span>
 	</div>
 </div>
+
+<!-- Hidden fields -->
+<%= f.hidden_field :autocomplete, value: false %>	
