--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,9 +9,10 @@
   <%= f.input :password, placeholder: "Password", input_html: { class: "form-control " }, label: false   %>
 
   <%= f.input :password_confirmation, placeholder: "Password Confirmation", input_html: { class: "form-control " }, label: false   %>
+		
+	<%= f.input :gender, collection: [['Male','m'],['Female','f']], prompt: "Select Gender", label: false %>
 
   <%= f.button :submit, "Sign up", class: "btn btn-lg btn-primary btn-block " %>
     <%= link_to "Sign in", new_session_path(resource_name), class: "btn btn-link" %>
 
 <% end %>
-
