--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,43 +5,8 @@
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
+  <%= render partial: 'users/edit/personal_details', locals: {f: f} %>
+  <%= render partial: 'users/edit/contact_details', locals: {f: f} %>
+  <%= render partial: 'users/edit/acount_settings', locals: {f: f} %>
 
-  <h3>Personal Detail</h3>
-  <%= f.input :avatar, as: :file %>
-  <%= f.input :gender %>
-  <%= f.input :username %>
-  <%= f.input :firstname %>
-  <%= f.input :lastname %>
-
-  <h3>Contact Detail</h3>
-  <%= f.input :tel %>
-  <%= f.input :mobile %>
-  <%= f.input :address %>
-  <%= f.input :post_code %>
-  
-  <h3>Acount settings</h3>
-  <%= f.input :email %>
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>  
-  <%= f.input :password, 
-              hint: "leave blank if you don't want to change it.",
-              placeholder: "password" %>
-  <%= f.input :password_confirmation,
-              placeholder: "password confirmation"  %>
-  <%= f.input :current_password, 
-              hint: "we need your current password to confirm your changes.",
-              placeholder: "current password"  %>
-            
-  <%= f.button :submit %>
-  <% if current_user.is_admin? %>
-    <%= f.label :admin, "Admin" %>
-    <%= f.check_box :admin %>  
-  <% end %>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
-
-<%= link_to "Back", :back %>
