--- a/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
@@ -9,7 +9,7 @@
 
 <!-- Destination -->
 <div class=" destination_input col-sm-6 my-col-md-12 my-col-lg-7">
-    <%= f.grouped_collection_select :destination_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input', placeholder: "Select destination city"} %>
+    <%= f.grouped_collection_select :destination_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, { class: 'select2_input', placeholder: "Select destination city"} %>
 	<div class="cycle select_mode">
 	<%= f.select :destination_cycle, (5..50).step(5).map{|s| ["#{s} KM", s]} %> 
 		<span class="glyphicon glyphicon-chevron-down"></span>
