start to work on user profile page untill it shows cover and avatar correctly for small devices

--- a/app/views/layouts/application_user.html.erb
+++ b/app/views/layouts/application_user.html.erb
@@ -2,13 +2,8 @@
 
   <%= render 'navbar' %>
 
-  <div class="container">
-  	
-    <div id="siteContent">
-      <%#= flash_creator flash %>
+  <div  id="userContainer" class="container">	
       <%= yield %>  
-    </div>
-    
   </div>
 
   <%= render 'layouts/footer' %>
