--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: {class: "form-sign-in-up"}, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :method => :POST, html: {class: "form-sign-in-up"}, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
 
  	<h2 class="form-sign-in-up-heading">Sign up form</h2>
 
