--- a/app/views/users/_single_profile.html.erb
+++ b/app/views/users/_single_profile.html.erb
@@ -1,23 +1,27 @@
-<h2>User Profile</h2>
-<table class="table">
-	<tbody>
-		<h3>Personal detail</h3>	
-		<%=  table_show_cell "Image", @user.avatar %>
-		<%=  table_show_cell "Gender", @user.gender %>
-		<%=  table_show_cell "First Name", @user.firstname %>
-		<%=  table_show_cell "Last Name", @user.lastname %>
-		<%=  table_show_cell "Username", @user.username %>
-	</tbody>
-</table>
+<div class="panel panel-default clear">
+  <div class="panel-heading">Personal Detail</div>
+	<table class="table">
+		<tbody>
+			<%=  table_show_cell "First Name", @user.firstname %>
+			<%=  table_show_cell "Last Name", @user.lastname %>
+			<%=  table_show_cell "Username", @user.username %>
+			<%=  table_show_cell "Gender", @user.gender_in_word %>
+			<%=  table_show_cell "Age", @user.age %>
+		</tbody>
+	</table>
+</div>
 
-<table class="table">		
-	<tbody>
-		<h3>Contact Detail</h3>
-		<%=  table_show_cell "Email", @user.email %>
-		<%=  table_show_cell "Tel", @user.tel %>
-		<%=  table_show_cell "Mobile", @user.mobile %>
-		<%=  table_show_cell "City", @user.city %>
-		<%=  table_show_cell "Address", @user.address %>
-		<%=  table_show_cell "Post Code", @user.post_code %>
-	</tbody>
-</table>
+
+<div class="panel panel-default clear">
+  <div class="panel-heading">Contact Detail</div>
+	<table class="table">		
+		<tbody>
+			<%=  table_show_cell "Email", @user.email %>
+			<%=  table_show_cell "Tel", @user.tel %>
+			<%=  table_show_cell "Mobile", @user.mobile %>
+			<%=  table_show_cell "City", @user.city %>
+			<%=  table_show_cell "Address", @user.address %>
+			<%=  table_show_cell "Post Code", @user.post_code %>
+		</tbody>
+	</table>
+</div>
