--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-4">
-	<%= render partial: 'users/users_row', locals: {users: @followed_users} %>
-	<%= render partial: 'users/users_row', locals: {users: @random_users} %>
+	<%= render partial: 'users/users_raw', locals: {users: @followed_users, title: "Your Followed Users "} %>
+	<%= render partial: 'users/users_raw', locals: {users: @random_users, title: "Users you may want to know"} %>
 </div>
 
 <div class="col-md-8">
