--- a/app/views/users/show/_avatar_and_brief_for_small_screen.html.erb
+++ b/app/views/users/show/_avatar_and_brief_for_small_screen.html.erb
@@ -3,4 +3,6 @@
 	<h1 class="nameOfUser"><small><%= @user.name %></small></h1>	
 	<span class="stars" style="background-position:1431px 0px;"></span>
 	<p class="score">(4.5/5)</p> 
+	<%= resent_activity(@user, "activity", "Last online: ") %>
+
 </div>
