--- a/app/views/users/show/_small_screens.html.erb
+++ b/app/views/users/show/_small_screens.html.erb
@@ -4,5 +4,6 @@
 	<%= flash_creator flash %>
 	<%= render 'single_profile' %>
 	<%= render 'vehicles/show' %>
+	<%= render partial: 'users/users_raw', locals: {users: @followed_users, title: "#{@user.name }'s Followed Users "} %>	
 	<%= render @shouts %>
 </div>
