authorization to remove shouts in _shout partial

--- a/app/assets/stylesheets/costum.scss.css
+++ b/app/assets/stylesheets/costum.scss.css
@@ -57,6 +57,9 @@ body{
     color: #911;
 }
 
+.clear{
+    clear: both;
+}
 /*make select2 highlight for states*/
 .select2-results li.select2-result-with-children > .select2-result-label {
     background-color: #bbb;
