--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -7,7 +7,8 @@
 		</p>
 		<span class="meta">
 			<%= time_ago_in_words(shout.created_at) %> ago			
-			<% if can? :destroy, shout.content %>
+			<%# if can? :destroy, shout.content %>
+			<% if shout.user == current_user %>
 				<span class="remove">
 					<%= link_to "remove", shout.content, method: :delete, class: "pull-left", data: {confirm: "Are you sure you want to delete this shout?"} %>
 				</span>
