--- a/app/assets/stylesheets/shouts.css.scss
+++ b/app/assets/stylesheets/shouts.css.scss
@@ -3,10 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .shout{
-	border-bottom: solid 1px #CCC;
 	padding: 5px 0;
 	.content{
-		padding: 0 50px
+		padding: 0 50px 0 0;
 	} 
 }
 
