--- a/app/views/users/edit/_acount_settings.html.erb
+++ b/app/views/users/edit/_acount_settings.html.erb
@@ -1,18 +1,33 @@
-<h3>Acount settings</h3>
-<%= f.input :email %>
-<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-	<div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-<% end %>  
+	<%= simple_form_for(resource, 
+		:as => resource_name, 
+		:url => registration_path(resource_name), 
+		:html => { :method => :put, class: 'form-horizontal' },
+	 	:defaults => { 
+	 		:wrapper_html => {
+	 			:class => 'form-group'
+	 		}, 
+	 		:input_html => { 	:class => 'form-control col-sm-8' 	},
+	 		label_html: { class: 'col-sm-3' }
+	 	}			) do |f| %>
 
-<%= f.input :password, 
-					   hint: "leave blank if you don't want to change it.",
-					   placeholder: "password", 
-					   input_html: { autocomplete: "off" }
-					    %>
-<%= f.input :password_confirmation,
-  placeholder: "password confirmation"  %>
-<%= f.input :current_password, 
-						 hint: "we need your current password to confirm your changes.",
-						 placeholder: "current password"  %>
+		<h3>Acount settings</h3>
+		<%= f.input :email, input_html: { disabled: "disabled" } %>
+		<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+			<div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+		<% end %>  
 
-<%= f.button :submit %>
+		<%= f.input :password, 
+							   # hint: "leave blank if you don't want to change it.",
+							   placeholder: "password", 
+							   input_html: { autocomplete: "off" }
+							    %>
+		<%= f.input :password_confirmation,
+		  placeholder: "password confirmation"  %>
+		<%= f.input :current_password, 
+								 # hint: "we need your current password to confirm your changes.",
+								 placeholder: "current password"  %>
+		<%= f.hidden_field :tab, :value => "acount_settings" %>
+
+		<%= f.button :submit %>
+		  
+	<% end %>
