--- a/app/views/users/edit/_contact_details.html.erb
+++ b/app/views/users/edit/_contact_details.html.erb
@@ -1,6 +1,21 @@
-<h3>Contact Detail</h3>
-<%= f.input :tel %>
-<%= f.input :mobile %>
-<%= f.input :address %>
-<%= f.input :post_code %>
-<%= f.button :submit %>
+<%= simple_form_for(resource, 
+	:as => resource_name, 
+	:url => registration_path(resource_name), 
+	:html => { :method => :put, class: 'form-horizontal' },
+ 	:defaults => { 
+ 		:wrapper_html => {
+ 			:class => 'form-group'
+ 		}, 
+ 		:input_html => { 	:class => 'form-control col-sm-8' 	},
+ 		label_html: { class: 'col-sm-3' }
+ 	}			) do |f| %>
+
+	<h3>Contact Detail</h3>
+	<%= f.input :tel %>
+	<%= f.input :mobile %>
+	<%= f.input :address %>
+	<%= f.input :post_code %>
+	<%= f.button :submit %>
+	<%= f.hidden_field :tab, :value => "contact_details" %>
+		  
+<% end %>
