uploading cover and avatar capability on their hover by coffescript

--- a/app/views/users/show/_avatar_and_brief_for_large_screen.html.erb
+++ b/app/views/users/show/_avatar_and_brief_for_large_screen.html.erb
@@ -1,6 +1,8 @@
 <div class="userAvatarLargeScreen raw">
 	<div class="avatar col-lg-5">
-		<%= gravatar(@user, 160, "img-responsive img-thumbnail",:square) %>
+		<div class="gravatar">
+			<%= render 'users/show/gravatar' %>
+		</div>
 	</div>
 	<div class="meta col-lg-7">
 		<h2 class="nameOfUser"><small><%= @user.name %></small></h2>		
