--- a/app/assets/stylesheets/user_profile.css.scss
+++ b/app/assets/stylesheets/user_profile.css.scss
@@ -24,6 +24,24 @@ h2{
 		width: 147px;
 		height: 26px;
 	}	
+	.cover_upload_form, .avatar_upload_form{
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		display: none;
+	}
+	.cover_upload_form.hover{
+		display: inline;
+	}
+	.avatar_upload_form.hover{
+		display: inline;
+	}
+	.cover_upload_submit{
+		display: none;
+	}
+	.avatar_upload_submit{
+		display: none;
+	}	
 	#cover{		
 		position: relative;
 		margin-bottom: 80px;
@@ -40,6 +58,9 @@ h2{
 			}			
 		}
 	} // #cover
+	.gravatar{
+		position: relative;
+	}
 	.hidden-lg{
 		.userAvatar{
 			position: absolute;
