--- a/app/views/users/show/_cover.html.erb
+++ b/app/views/users/show/_cover.html.erb
@@ -8,6 +8,13 @@
 		<div class="follow"><%= follow_button @user %></div> 
 	<% end %>
 	
+	<% if can? :edit, @user %>
+		<%= simple_form_for(:user, url: user_registration_path, html: { method: :put, class: "cover_upload_form" } ) do |f| %>
+			<%= f.input :cover, as: :file, label: false, input_html: { class: 'cover_upload_button' } %>
+		 	<%= f.button :submit, "Upload Cover", {class: ' btn-primary cover_upload_submit'}%>
+		<% end %>
+	<% end %> 
+
 	<!-- Hidden for large screens -->
 	<%= render 'users/show/avatar_and_brief_for_small_screen' %>
 </div>
