--- a/app/views/trips/_form_new.html.erb
+++ b/app/views/trips/_form_new.html.erb
@@ -2,88 +2,46 @@
 <div class="panel panel-default">
   <div class="panel-heading">New trip Form</div>
   <div class="panel-body">
-    <%= simple_form_for(@trip) do |f| %>
-      <%= f.error_notification %>
-
+    <%= form_for(@trip) do |f| %>
+      <%= error_messages_for(@trip) %>
     <div class="panel-body">
-  <!-- Time -->    
-      <div class="row">
-        <div class="col-sm-3">
-          <b>Time</b>   
-        </div>
-         <div class="col-sm-8">
-          <%= select :first_sub, :jminute, options_for_minute, {:include_blank => false}  %>
-          <%= select :first_sub, :jhour, options_for_hour, {:include_blank => false}  %>
-        </div>              
-      </div>
-
-  <!-- Date -->
-      <div class="row">      
-        <div class="col-sm-3">
-          <b>Date</b>   
-        </div>     
-        <div class="col-sm-8">
-          <%= select :first_sub, :jday, options_for_day %> 
-          <%= select :first_sub, :jmonth, options_for_month %>
-          <%= select :first_sub, :jyear, options_for_year %> 
-        </div>
-      </div>    
      
      <b>Route</b>
       <div class="trip-route">
-    <!-- From -->
-        <div class="row">      
-          <div class="col-sm-3">
-            From   
-          </div>     
-          <div class="col-sm-8">
-            <%= grouped_collection_select :first_sub, :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input', placeholder: "Select start city"} %>
-          </div>
-        </div> 
-
-    <!-- Stopovers -->
-        <div class="row">
-            <%= f.simple_fields_for :subtrips do |builder| %>
-                <%= render 'subtrip_fields', f: builder %>
-            <% end %>          
-          <%= link_to_add_fields "Add Stopover", f, :subtrips %>
-        </div> 
-
-    <!-- To -->
-        <div class="row">      
-          <div class="col-sm-3">
-            To 
-          </div>     
-          <div class="col-sm-8">
-            <%= grouped_collection_select :first_sub, :destination_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input', placeholder: "Select destination city"} %>
-          </div>
-        </div> 
+        <!-- Stopovers -->
+        <%= f.simple_fields_for :subtrips do |s| %>
+          <%= render 'subtrip_fields', f: s %>
+        <% end %>  <!--  f.simple_fields_for :subtrips do |s|  -->
+        <%= link_to_add_fields "Add Stopover", f, :subtrips %>
       </div> <!-- trip-route -->
-  <!-- Total seats -->
+
+      <!-- Total seats -->
       <div class="row">
         <div class="col-sm-3">
-                  <%= f.label :total_available_seats, 'Total seats' %>
-
+          <%= f.label :total_available_seats, 'Total seats' %>
         </div>  
         <div class="col-sm-8">        
-           <%= f.input :total_available_seats, collection: 1..@vehicle_seats, selected: @vehicle_seats, hint: 'This field related to your car\'s seating capacity.', label: false %> <br>
+           <% seats = current_user.vehicle.vehicle_model.seats_number  %>
+           <%= f.select :total_available_seats, 1..seats, selected: seats, hint: 'This field related to your car\'s seating capacity.', label: false %> <br>
         </div>
       </div>
 
-  <!-- detail -->
-      <div class="row">      
+      <%= grouped_collection_select :test, :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:class => 'select-via-city form-control '} %>     
+
+      <!-- detail -->
+      <div class="row"> 
         <div class="col-sm-3">
           <%= f.label :detail %>
         </div>     
         <div class="col-sm-9">
-          <%= f.input_field :detail, as: :text, class: "form-control col-sm-12", rows: "3" %>
+          <%= f.text_area :detail, class: "form-control col-sm-12", rows: "3" %>
         </div>
       </div> 
 
-  <!-- submit -->
+      <!-- submit -->
       <div class="row">      
         <div class="col-sm-3 col-sm-offset-9">
-          <%= f.button :submit,'Submit Trip', class: "add_fields btn btn-primary btn-sm pull-left" %>
+          <%= f.submit 'Submit Trip', class: "add_fields btn btn-primary btn-sm pull-left" %>
         </div>
       </div>     
     <% end %>
